# Cran-New

./: .dockerignore  .env.example  .gitignore  CHANGES_RPI5_CAMERA_SUPPORT.md  Dockerfile  QUICK_START_RPI5.sh  RASPBERRY_PI_5_SETUP.md  README.md  bridge_pose_modbus.py  docker-compose.yml  hook_pose_modbus.py  modbus_pose_reader_test.py  pyproject.toml  requirements.txt  run_bridge_pose_supervisor.py  run_hook_pose_supervisor.py  run_pose_influx_writer.py  test_rpi_cameras.py
app/: dependencies.py  main.py
app/core/: __init__.py  runtime_paths.py  security.py  settings.py
app/routers/: api.py  auth.py  pages.py
app/schemas/: calibration.py
app/services/: aruco_common.py  bridge_pose_estimator.py  calibration_algorithms.py  calibration_runtime.py  calibration_session.py  camera_backends.py  camera_config.py  camera_frame_provider.py  camera_intrinsics.py  config_store.py  control_service.py  external_pose_processes.py  influx_pose_reader.py  influx_pose_writer.py  jetson_camera_provider.py  modbus_pose_reader.py  pose_modbus_common.py  pose_runtime_common.py  pose_supervisor.py  pymodbus_compat.py  spatial_marker_map.py
data/: calibration_config.example.json  calibration_config.json
docs/: deployment.md  rpi5_dual_camera.md
docs/methodology/: README.md  bridge-pose-runtime.md  hook-pose-runtime.md  modbus-protocol.md  (+3 more)
scripts/: healthcheck_influx_writer.sh  healthcheck_pose_supervisor.sh
templates/: calibration_complete.html  control.html  dashboard.html  login.html  main.html  xy_calib.html  xy_settings.html  z_calib.html  z_settings.html
(+7 files in other folders)
